--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -217,6 +217,9 @@
 
     </div>
 
+
+    {% include "homepage/testimonials.html" %}
+
     <div class="container" id="sponsors">
        <div id="sponsor" class="row">
            <h1 class="center-align grey-text text-darken-2">Sponsors</h1>
@@ -225,9 +228,9 @@
            <h5 class="center-align grey-text text-darken-2">Sponsors pasados</h5>
            <div class="carousel">
                <a class="carousel-item" href="">{%load staticfiles %}<img class="responsive-img" src="{% static "homepage/img/acm_logo.png" %}"></a>
-                <a class="carousel-item" href="https://careers.google.com/jobs"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/2000px-Google_2015_logo.svg.png"></a>
-                <a class="carousel-item" href="http://facebook.com/careers"><img src="http://cs.ucsp.edu.pe/cep2015/img/sponsor/facebook.jpg"></a>
-                <a class="carousel-item" href="https://www.facebook.com/cendif"><img src="http://cs.ucsp.edu.pe/cep2015/img/sponsor/cendif.png"></a>
+               <a class="carousel-item" href="https://careers.google.com/jobs"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/2000px-Google_2015_logo.svg.png"></a>
+               <a class="carousel-item" href="http://facebook.com/careers"><img src="http://cs.ucsp.edu.pe/cep2015/img/sponsor/facebook.jpg"></a>
+               <a class="carousel-item" href="https://www.facebook.com/cendif"><img src="http://cs.ucsp.edu.pe/cep2015/img/sponsor/cendif.png"></a>
            </div>
        </div>
     </div>
