--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -13,7 +13,9 @@
         <!--Import materialize.css-->
         <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/materialize.css' %}"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/style.css' %}"  media="all"/>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/testStyles.css' %}"  media="all"/>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     {% endblock %}
 </head>
 
@@ -67,9 +69,9 @@
   </footer>
 
         {% load staticfiles %}
-        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.1/jquery.flexslider.min.js"></script>
         <script type="text/javascript" src="{% static 'homepage/js/materialize.js' %}"></script>
-        <script type="text/javascript" src="{% static "homepage/js/init.js" %}"></script>
-
+        <script type="text/javascript" src="{% static 'homepage/js/init.js' %}"></script>
   </body>
 </html>
