--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -11,11 +11,14 @@
         <meta name="description" content="CEP 2017">
         <meta name="keywords"  content="contest,programing event" />
         <!--Import materialize.css-->
+        <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/materialize.css' %}"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/style.css' %}"  media="all"/>
         <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/testStyles.css' %}"  media="all"/>
+        <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/timerStyles.css' %}"  media="all"/>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     {% endblock %}
 </head>
 
@@ -71,7 +74,8 @@
         {% load staticfiles %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.1/jquery.flexslider.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
         <script type="text/javascript" src="{% static 'homepage/js/materialize.js' %}"></script>
         <script type="text/javascript" src="{% static 'homepage/js/init.js' %}"></script>
-  </body>
+   </body>
 </html>
