--- a/homepage/static/homepage/css/additional_styles.css
+++ b/homepage/static/homepage/css/additional_styles.css
@@ -1,3 +1,4 @@
+/*TESTIMONIOS*/
 .testimonial-container {
         background-color: rgba(245, 245, 245, 1);
         width: 100%;
@@ -15,24 +16,13 @@
         z-index: 1;
 }
 
-.cd-testimonials-wrapper h2 {
-        text-align: center;
-        position: absolute;
-        width: 100%;
-        top: 60px;
-        margin: 0 auto;
-}
 
-@media only screen and (min-width: 768px) {
-        .cd-testimonials-wrapper {
-                padding: 170px 0px 60px;
+@media only screen and (max-width : 600px) {
+        .cd-testimonials-wrapper h1{
+                font-size: 27px!important;
         }
-        .cd-testimonials-wrapper h2 {
-                text-align: center;
-                position: absolute;
-                width: 100%;
-                top: 100px;
-                margin: 0 auto;
+        .cd-testimonials-wrapper p{
+                font-size: 13px!important;
         }
 }
 
@@ -65,98 +55,8 @@
         line-height: 1.4;
         margin-bottom: 1em;
         padding: 0 14px;
+        font-size: 20px;
 }
-
-@media only screen and (min-width: 768px) {
-        .testimonial-content p {
-                font-size: 20px;
-                font-family: 'Open Sans';
-        }
-}
-
-@media only screen and (min-width: 1170px) {
-        .testimonial-content p {
-                font-size: 24px;
-                line-height: 1.6;
-        }
-}
-
-.cd-author-info span p {
-        display: inline-block;
-        font-size: 14px;
-        padding-left: 0;
-}
-
-.cd-author-info span p a {
-        color: rgba(126, 129, 136, 1);
-}
-
-.cd-author img,
-.cd-author .cd-author-info {
-        display: inline-block;
-        vertical-align: top;
-}
-
-.cd-author img {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        margin-right: 5px;
-}
-
-.cd-author .cd-author-info {
-        text-align: left;
-        line-height: 1
-}
-
-.cd-author .cd-author-info li:first-child {
-        font-size: 14px;
-        margin-top: 4px;
-}
-
-.cd-author .cd-author-info li:last-child {
-        font-size: 12px;
-        color: #6b6b70;
-}
-
-ul.cd-author-info {
-        list-style: none;
-}
-
-ul.cd-author-info li span:before {
-        font-family: 'FontAwesome';
-        content: '\f099';
-        font-size: 24px;
-        display: inline-block;
-        position: absolute;
-        margin-top: 2px;
-        font-style: normal;
-        margin-left: -30px;
-}
-
-ul.cd-author-info li span {
-        font-size: 14px;
-        padding-left: 30px;
-        line-height: 24px;
-        font-family: 'Open Sans', sans-serif;
-        font-style: italic;
-        font-weight: 300;
-}
-
-@media only screen and (min-width: 768px) {
-        .cd-author img {
-                width: 58px;
-                height: 58px;
-        }
-        .cd-author .cd-author-info {
-                line-height: 1.4;
-        }
-        .cd-author .cd-author-info li:first-child {
-                font-size: 18px;
-        }
-}
-
-@media only screen and (max-width: 320px) {}
 
 .flex-direction-nav a {
         text-decoration: none;
@@ -305,3 +205,50 @@ ul.cd-author-info li span {
                 visibility: hidden;
         }
 }
+/*end testimonial*/
+
+/*start Countdown*/
+#clockdiv{
+	font-family: sans-serif;
+	color: #fff;
+	display: inline-block;
+	font-weight: 100;
+	text-align: center;
+	font-size: 30px;
+}
+
+#clockdiv > div{
+	padding: 10px;
+	border-radius: 3px;
+	background: #00BF96;
+	display: inline-block;
+}
+
+#clockdiv div > span{
+	padding: 15px;
+	border-radius: 3px;
+	background: #00816A;
+	display: inline-block;
+}
+
+.smalltext{
+	padding-top: 5px;
+	font-size: 16px;
+}
+
+@media only screen and (max-width : 600px) {
+        #clockdiv{
+                font-size: 15px;
+        }
+        #clockdiv > div{
+                padding: 8px;
+        }
+        #clockdiv div > span{
+                padding: 10px;
+        }
+        .smalltext{
+                padding-top: 5px;
+                font-size: 10px;
+        }
+}
+/*end countdown*/
