--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -14,9 +14,8 @@
         <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/materialize.css' %}"  media="screen,projection"/>
-        <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/style.css' %}"  media="all"/>
-        <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/testStyles.css' %}"  media="all"/>
-        <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/timerStyles.css' %}"  media="all"/>
+        <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/main.css' %}" media="all"/>
+        <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/additional_styles.css' %}" media="all"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     {% endblock %}
@@ -29,28 +28,31 @@
         <nav class="nav-fixed teal lighten-2">
             <div class="nav-wrapper container">
                 <a href="#" data-activates="slide-out" class="button-collapse" id="button-collapse"><i class="material-icons cyan-text text-darken-4">menu</i></a>
-                <a id="logo-container" href="base.html" class="brand-logo">CEP2017</a>
+                <a id="logo-container" href="#" class="brand-logo">CEP2017</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="http://localhost:8000/#index-banner">INICIO</a></li>
+                    <!--<li><a href="http://localhost:8000/#index-banner">INICIO</a></li>-->
                     <li><a href="http://localhost:8000/#nosotros">NOSOTROS</a></li>
                     <li><a href="http://localhost:8000/#register">REGISTRO</a></li>
                     <li><a href="http://localhost:8000/#ubicacion">UBICACION</a></li>
                     <li><a href="http://localhost:8000/#sponsors">SPONSORS</a></li>
+                    <!--<li><a href="http://localhost:8000/#testimonios">TESTIMONIOS</a></li>-->
                     <li><a href="http://localhost:8000/contact/">CONTACTO</a></li>
+                    <li><a href="http://cs.ucsp.edu.pe/aprende/">APRENDE</a></li>
                 </ul>
             </div>
         </nav>
         <div class="nav-wrapper">
             <ul class="side-nav" id="slide-out">
-                <li><a href="http://localhost:8000/#index-banner">INICIO</a></li>
+                <!--<li><a href="http://localhost:8000/#index-banner">INICIO</a></li>-->
                 <li><a href="http://localhost:8000/#nosotros">NOSOTROS</a></li>
                 <li><a href="http://localhost:8000/#register">REGISTRO</a></li>
                 <li><a href="http://localhost:8000/#ubicacion">UBICACION</a></li>
                 <li><a href="http://localhost:8000/#sponsors">SPONSORS</a></li>
+                <!--<li><a href="http://localhost:8000/#testimonios">TESTIMONIOS</a></li>-->
                 <li><a href="http://localhost:8000/contact/">CONTACTO</a></li>
+                <li><a href="http://cs.ucsp.edu.pe/aprende/">APRENDE</a></li>
             </ul>
         </div>
-
     </div>
 
 
