ubicación section: background changed social buttons added

--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -17,6 +17,8 @@
         <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/main.css' %}" media="all"/>
         <link type="text/css" rel="stylesheet" href="{% static 'homepage/css/additional_styles.css' %}" media="all"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     {% endblock %}
 </head>
@@ -59,12 +61,17 @@
     {% block content %}{% endblock %}
   <footer class="page-footer amber grey darken-4">
     <div class="container">
-         <div class="row">
-        <div class="col l9 s12">
-          <h3 class="white-text">Mantente Conectado</h3>
-          <p class="grey-text text-lighten-4">CONÉCTATE CON NOSOTROS A TRAVÉS DE NUESTRAS REDES SOCIALES</p>
+        <div class="row">
+            <div class="col l9 s12">
+                <h3 class="white-text">Mantente Conectado</h3>
+                <p class="grey-text text-lighten-4">CONÉCTATE CON NOSOTROS A TRAVÉS DE NUESTRAS REDES SOCIALES</p>
+                <div>
+                    <a href="https://www.facebook.com/ACMUCSP/" class="fa fa-facebook"></a>
+                    <a href="https://twitter.com/ACMUCSP" class="fa fa-twitter"></a>
+                </div>
+            </div>
+
         </div>
-      </div>
     </div>
       <div class="footer-copyright">
       <div class="container center-align">
