--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -191,7 +191,7 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <div class="row">
-                    <h1 class="center-align">Ubicacion</h1>
+                    <h1 class="center-align">Ubicación</h1>
                     <h5 class="center-align">Compite y gana grandes premios</h5>
                     <div class="col s12 m4">
                         <div class="icon-block">
@@ -215,11 +215,10 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
 
-        <div class="parallax">{% load staticfiles %}<img class="responsive-img" src="{% static "homepage/img/background1.jpg" %}" alt="Unsplashed background img 3"></div>
+        <div class="parallax">{% load staticfiles %}<img class="responsive-img" src="{% static "homepage/img/helloworld.jpg" %}" alt="Unsplashed background img 3"></div>
 
     </div>
 
